--- a/src/src.DataAccess/src.DataAccess.csproj
+++ b/src/src.DataAccess/src.DataAccess.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
     <PackageReference Include="NLog" Version="5.2.4" />
   </ItemGroup>
 
