--- a/src/src.BusinessLogic/src.BusinessLogic.csproj
+++ b/src/src.BusinessLogic/src.BusinessLogic.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\src.DataAccess\src.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
